<resources>
    <string name="idStop">Stop</string>
    <string name="about_msg">UHF Rfid Demo v1.1</string>
    <string name="idStart">Start</string>
    <string name="app_name">Rfid UHF Demo</string>
    <string-array name="mainOperations">
        <item>Identification</item>
        <item>Power reading and setting</item>
        <item> Frequency reading</item>
        <item>Read</item>
        <item>Write</item>
        <item>Match</item>
        <item>Erase</item>
        <item>Lock</item>
        <item>Destruct</item>
    </string-array>
    <string-array name="banksStrings">
        <item>Reserved</item>
        <item>Epc</item>
        <item>Tid</item>
        <item>User</item>
    </string-array>
    <string-array name="lockPayloadValues">
        <item>0</item>
        <item>1</item>
    </string-array>
    <string-array name="SelectRecordIndexes">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
    </string-array>
    <string-array name="SelectRecordTarget">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
    </string-array>
    <string-array name="SelectRecordAction">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
    </string-array>
    <string name="idRecordsList_SpinnerPrompt">Save setting</string>
    <string-array name="mainOptionTypes">
        <item>Single tag</item>
        <item>Single tag cyclic</item>
        <item>Anti-collision cyclic</item>
    </string-array>
    <string-array name="E2DestOpTypes">
        <item>Pointed label</item>
        <item>Any label</item>
        <item>Match label</item>
    </string-array>
    <string-array name="E2FrequencyMode">
        <item>Chinese Standard 920-925Mhz</item>
        <item>Chinese Standard 840-845Mhz</item>
        <item>ETSI</item>
        <item>Fixed frequency 915Mhz</item>
        <item>Customized mode</item>
    </string-array>
    <string-array name="E2PureNum1_16">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
    </string-array>
    <string-array name="E2HopMode">
        <item>Random hopping</item>
        <item>Hopping from high to low</item>
        <item>Hopping from low to high</item>
    </string-array>
    <string name="SpecifyLabel">Pointed tag</string>
    <string name="AnyLabel">Any Tag</string>
    <string name="AnyMatch">Any match</string>
    <string name="Set">Set</string>
    <string name="InputStartAddr">Input start address</string>
    <string name="MastInput_Prompt">Input mask as integer number bytes</string>
    <string name="MastLength_Insufficient">Input mask length is insufficient</string>
    <string name="SetOk">Set successfully</string>
    <string name="SetFailure">Set unsuccessfully</string>
    <string name="ScanningLabel">Scanning tag</string>
    <string name="OK">Confirm</string>
    <string name="SelectOneLabel">Select a tag</string>
    <string name="Inventory">Inventory</string>
    <string name="Stop">Stop</string>
    <string name="EmptyData">Clean data</string>
    <string name="SaveRecord">Save record</string>
    <string name="CheckRecord">Check record</string>
    <string name="WithoutDataToSave">No date to save</string>
    <string name="AreYouSave">Save the record?</string>
    <string name="Yes">Yes</string>
    <string name="PrefixAndFileNameCannotEmpty">Prefix and file Name can not be empty</string>
    <string name="SaveSuccessful">Save successfully</string>
    <string name="SaveFailure">Save unsuccessfully</string>
    <string name="No">No</string>
    <string name="InputCorrectLabel">Please point a correct label UII to operation</string>
    <string name="InputCorrectReadAddr">Please input correct read address</string>
    <string name="AssignedReadNumGreaterThanZero">Current pointed number of reads must be greater than Zero</string>
    <string name="InputCorrectReadLength">Please input correct read length</string>
    <string name="ReadDataFailure">Read data unsuccessfully</string>
    <string name="Label">Tag:</string>
    <string name="Length">Length:</string>
    <string name="Data">  Data:</string>
    <string name="MakeSurePDAexitRfid">No Rfid UHF communication module, make sure the current PDA memory have this module</string>
    <string name="DestructOrder">KPWD</string>
    <string name="DestructFailure">Kill failed</string>
    <string name="Destruct">Kill</string>
    <string name="successful">Successful</string>
    <string name="Locked">Lock</string>
    <string name="UnLock">Unlock</string>
    <string name="LockFailure">Lock failed</string>
    <string name="UnLockFailure">Unlock failed</string>
    <string name="CurrentModuleOnlySupportTheAssignLabelErasure">This module only supports to erase the specified label</string>
    <string name="CurrentModuleOnlySupportTheAssignLabelOpr">This module only supports operation to the specified label</string>
    <string name="CurrentModuleOnlySupportSingleWordWrite">This module only supports single number mode input</string>
    <string name="InputCorrectErasNumber">Please input correct erase number</string>
    <string name="EraDataFailure">Erase failed:</string>
    <string name="EraDataSuccessful">Erase successfully:</string>
    <string name="InputPrompt">Input data should be integer times of double-bytes</string>
    <string name="CurrentModuleNotSupportWrite">Current module doesn\'t support block write</string>
    <string name="WriteFailure">Write data failed</string>
    <string name="WriteWordNumber">Write length:</string>
    <string name="InputValueAndUnit">Please input power value in dbm</string>
    <string name="CurrentModulePowerRange">Current module power range [10,30]</string>
    <string name="ChannelNumberCannotZero">Channel number can not be zero</string>
    <string name="ChannelNumberOutModuleSupport">Channel number is out of module support</string>
    <string name="ChannelNumberIllegal">Channel number is out of module support</string>
    <string name="ChannelBandWidthCannotGreaterThan1000">channel bandwidth can not exceed 1000KHz</string>
    <string name="broadbandCannotGreaterThan12Mhz">When the base frequency is 50Khz, the bandwidth can not be greater than 12Mhz</string>
    <string name="broadbandCannotGreaterThan32Mhz">When the base frequency is 50Khz, the bandwidth can not be greater than 32Mhz</string>
    <string name="InError">Internal error</string>
    <string name="FMAXCannotPass960Mhz">Should not exceed the maximum frequency 960MHz</string>
    <string name="FrequencyGetFailure">Get frequency failed, please try again later</string>
    <string name="FrequencySetSuccessful">Frequency set successfully</string>
    <string name="FrequencySetFailure">Frequency set failed</string>
    <string name="Recognition">Inventory</string>
    <string name="Read">Read</string>
    <string name="Write">Write</string>
    <string name="Erase">Erase</string>
    <string name="Back">Back</string>
    <string name="idReadActivity_title">Read</string>
    <string name="WriteData">Data</string>
    <string name="EraseData">Erase</string>
    <string name="idLockActivity_title">Lock</string>
    <string name="idUnlockDataActivity_title">UnLock</string>
    <string name="idKillActivity_title">Kill</string>
    <string name="RecordFind">Record find</string>
    <string name="RecordCheck">Record check</string>
    <string name="Hint_16_Addr">Address start with hexadecimal value</string>
    <string name="Hint_10_Mask_length">Decimal mask length</string>
    <string name="Hint_16_Mask">Hexadecimal mask</string>
    <string name="SingleLableOne">Single Tag Once</string>
    <string name="SingleLableCucle">Single Tag Cycle</string>
    <string name="AvoidCollisionCycle">Anti-collision cycle</string>
    <string name="ReadNumber">Length</string>
    <string name="decimalism">Decima</string>
    <string name="startAddr">Index</string>
    <string name="Jinzhi_16_band">Hex</string>
    <string name="DontOpr">Non-professionals do not operate</string>
    <string name="EraseNumber">Length</string>
    <string name="AllUnLock">Unlock completely</string>
    <string name="Frequency">Frequency:</string>
    <string name="Power">Power：</string>
    <string name="workMode">Mode:</string>
    <string name="FrequencyRange">Range:</string>
    <string name="FrequencyBase">Base:</string>
    <string name="StartFrequency">BF:</string>
    <string name="ChannelNumber">CN:</string>
    <string name="ChannelBandWidth">SPC:</string>
    <string name="JumpLvMode">Hop mode：</string>
    <string name="SetFrequency">Set</string>
    <string name="ReadFrequency">Read</string>
    <string name="Find">Find</string>
    <string name="SetMatch">Set Match</string>
    <string name="strApwd">APWD</string>
    <string name="Cancel">Cancel</string>
    <string name="FileName">File Name</string>
    <string name="ItemName">Item Name</string>
    <string name="idWriteActivity_title">Write</string>
    <string name="idConfigureActivity_title">Configure</string>
    <string name="strKpwd">KPWD</string>
    <string name="idTagsCount_Colon">Tags Count:</string>
    <string-array name="idArray1To8">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
    </string-array>
    <string-array name="strsS0S1S2S3">
        <item>S0</item>
        <item>S1</item>
        <item>S2</item>
        <item>S3</item>
    </string-array>
    <string-array name="strsAlgorithmStaticDynamic">
        <item>Fixed Q</item>
        <item>Dynamic Q</item>
    </string-array>
    <string name="Get">Get</string>
    <string name="get">get</string>
    <string name="set">set</string>
    <string-array name="strsEnableAndDisenable">
        <item>Enable</item>
        <item>Disnable</item>
    </string-array>
    <string-array name="strsUnrevertRevert">
        <item>Unrevert</item>
        <item>Revert</item>
    </string-array>
    <string-array name="strsQ0_Q15">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
    </string-array>
    <string name="SetQ">Set Q</string>
    <string name="Session">Session</string>
    <string-array name="Sessions_S0S1S2S3">
        <item>S0</item>
        <item>S1</item>
        <item>S2</item>
        <item>S3</item>
    </string-array>
    <string name="idSetQ">Set Q value</string>
    <string name="idInventoryFinished_Colon">Inventory finished:</string>
    <string name="idInventoryFinished">Inventory finished</string>
    <string name="idGetPowerFail">Get power fail</string>
    <string name="idGetPowerSuccess">Get power success</string>
    <string name="Temporary_colon">Temporary:</string>
    <string name="Protocol_colon">Protocol：</string>
    <string name="str6B">6B</string>
    <string name="str6C">6C</string>
</resources>