<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="20dp"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Power" />

            <EditText
                android:id="@+id/idE27SettingsActivity_Power_etShow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1000"
                android:ems="2"
                android:inputType="number"
                android:text="15" >

                <requestFocus />
            </EditText>

            <Button
                android:id="@+id/idE27SettingsActivity_Power_btnRead"
                style="@style/AppClickableHightStyle"
                android:layout_width="wrap_content"
                android:text="@string/Read" />

            <Button
                android:id="@+id/idE27SettingsActivity_Power_btnSet"
                style="@style/AppClickableHightStyle"
                android:layout_width="wrap_content"
                android:text="@string/Set" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Frequency" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:orientation="vertical" >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" >

                    <TextView
                        android:id="@+id/textView3"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:text="@string/workMode" />

                    <Spinner
                        android:id="@+id/idE27SettingsActivity_Frequency_spnrMode"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="5"
                        android:entries="@array/E2FrequencyMode" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" >

                    <TextView
                        android:id="@+id/idE27SettingsActivity_FixFrequency_tvShow"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:text="@string/FrequencyRange" />

                    <TextView
                        android:id="@+id/idE27SettingsActivity_Frequency_tvRange"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="4"
                        android:text="820" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="Mhz" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" >

                    <TextView
                        android:id="@+id/idE27SettingsActivity_FixFrequency_tvShow"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:text="@string/FrequencyBase" />

                    <RadioGroup
                        style="@style/AppClickableHightStyle"
                        android:layout_width="0dp"
                        android:layout_weight="4"
                        android:orientation="horizontal" >

                        <RadioButton
                            android:id="@+id/idE27SettingsActivity_Frequency_cb50khz"
                            android:layout_width="0dp"
                            android:layout_height="24dp"
                            android:layout_weight="1"
                            android:checked="true"
                            android:text="50" />

                        <RadioButton
                            android:id="@+id/idE27SettingsActivity_Frequency_cb125khz"
                            android:layout_width="0dp"
                            android:layout_height="24dp"
                            android:layout_weight="1"
                            android:text="125" />
                    </RadioGroup>

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="Khz" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical" >

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal" >

                        <TextView
                            android:id="@+id/idE27SettingsActivity_FixFrequency_tvShow"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="2"
                            android:text="@string/StartFrequency" />

                        <TextView
                            android:id="@+id/idE27SettingsActivity_Frequency_tvBegainFrequency"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="4"
                            android:text="820" />

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="Mhz" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" >

                        <SeekBar
                            android:id="@+id/idE27SettingsActivity_Frequency_sbBegainFrequency"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="2"
                            android:max="120000" />
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" >

                    <TextView
                        android:id="@+id/idE27SettingsActivity_FixFrequency_tvShow"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:text="@string/ChannelNumber" />

                    <EditText
                        android:id="@+id/idE27SettingsActivity_Frequency_etChannelNum"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="5"
                        android:text="16" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" >

                    <TextView
                        android:id="@+id/idE27SettingsActivity_FixFrequency_tvShow"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:text="@string/ChannelBandWidth" />

                    <Spinner
                        android:id="@+id/idE27SettingsActivity_Frequency_spnrChannelSpace"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:entries="@array/E2PureNum1_16" />

                    <TextView
                        android:id="@+id/idE27SettingsActivity_Frequncey_tvChannelSpace"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:text="25" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="Khz" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" >

                    <TextView
                        android:id="@+id/idE27SettingsActivity_FixFrequency_tvShow"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:text="@string/JumpLvMode" />

                    <Spinner
                        android:id="@+id/idE27SettingsActivity_Frequency_spnrHop"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="5"
                        android:entries="@array/E2HopMode" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" >

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" >

                        <Button
                            android:id="@+id/idE27SettingsActivity_Frequency_btnFrequencySet"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentRight="true"
                            android:layout_alignParentTop="true"
                            android:text="@string/SetFrequency" />

                        <Button
                            android:id="@+id/idE27SettingsActivity_Frequency_btnFrequencyGet"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentTop="true"
                            android:layout_toLeftOf="@+id/idE27SettingsActivity_Frequency_btnFrequencySet"
                            android:text="@string/ReadFrequency" />
                    </RelativeLayout>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>